# azure-requests

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.py  justfile  pyproject.toml  setup.py
azure_requests/: __init__.py
