[project]
name = "azure_requests"
version = "23.1"  # YY.<counter>
description = "Requests wrapper for Azure DevOps"
readme = "README.md"
license = {text = "MIT License"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["requests"]

[[project.authors]]
name = "Máté Farkas"
email = "fm@farkas-mate.hu"

[project.urls]
homepage = "https://github.com/presidento/azure-requests"

[tool.setuptools.package-data]
azure_requests = ["py.typed"]
